docker and json name changes

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "name": "globaldemo",
-  "description": "Demo links",
+  "name": "shahrzad",
+  "description": "Adobe demo links",
   "keywords": [
-    "Global",
-    "Parts",
-    "Tracking",
-    "POC"
+    "Adone",
+    "Links",
+    "Embed",
+    "Demo"
   ],
-  "website": "https://github.com/bijoyko/globaldemo",
-  "repository": "https://github.com/bijoyko/globaldemo"
+  "website": "https://github.com/bijoyko/shahrzaddemo",
+  "repository": "https://github.com/bijoyko/shahrzaddemo"
 }
